--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,17 +16,14 @@
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body ng-app="magus" ng-controller="magusRootController" ui-prevent-touchmove-defaults>
     <!-- Sidebars -->
-    <div ng-include="'menu.html'" 
+    <div ng-include="'pages/menu.html'" 
             ui-track-as-search-param='true'
             class="sidebar sidebar-left"></div>
-
-    <div ng-include="'sidebarRight.html'" 
-            class="sidebar sidebar-right"></div>
 
     <div class="app" 
          ui-swipe-right='Ui.turnOn("uiSidebarLeft")'
@@ -41,11 +38,6 @@
         <div class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
             <i class="fa fa-bars"></i> Menu
-          </div>
-        </div>
-        <div class="btn-group pull-right" ui-yield-to="navbarAction">
-          <div ui-toggle="uiSidebarRight" class="btn">
-            <i class="fa fa-user"></i>
           </div>
         </div>
       </div>
