--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,8 @@
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
+    <script src="js/controllers/LoginController.js"></script>
+    <script src="js/services/AuthenticationService.js"></script>
     <script src="js/main.js"></script>
   </head>
 
