--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,17 +11,22 @@
     <link rel="stylesheet" href="css/mobile-angular-ui-hover.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-desktop.min.css" />
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/angularjs-1.4.8/angular.min.js"></script>
     <script src="js/angularjs-1.4.8/angular-route.min.js"></script>
+    <script src="js/angularjs-1.4.8/angular-cookies.min.js"></script>
+    <script src="js/angularjs-1.4.8/angular-resource.min.js"></script>
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
-    <script src="js/main.js"></script>
   </head>
 
-  <body ng-app="magus" ng-controller="magusRootController" ui-prevent-touchmove-defaults>
+  <body ng-app="magus" 
+    ng-controller="MainController"
+    ui-prevent-touchmove-defaults>
     <!-- Sidebars -->
     <div ng-include="'pages/menu.html'" 
             ui-track-as-search-param='true'
@@ -57,7 +62,7 @@
           <i class="fa fa-spinner fa-spin loading-spinner"></i>
         </div>
         <div class="app-content">
-          <ng-view></ng-view>
+          <div ng-view></div>
         </div>
       </div>
 
