- Minor UI Improvements

--- a/src/main/webapp/pages/menu.html
+++ b/src/main/webapp/pages/menu.html
@@ -1,4 +1,4 @@
-<div ng-if="globals.currentUser" class="scrollable">
+<div ng-if="globals.kycValid == true" class="scrollable">
   <h1 class="scrollable-header app-name">Magus<small></small></h1>  
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
