--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,7 @@
     <script src="js/main.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/KYCAadharController.js"></script>
+    <script src="js/controllers/HomeController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
     <script src="js/services/KYCService.js"></script>
   </head>
@@ -30,7 +31,7 @@
     ng-controller="MainController"
     ui-prevent-touchmove-defaults>
     <!-- Sidebars -->
-    <div ng-if="globals.currentUser"  ng-include="'pages/menu.html'" 
+    <div ng-if="globals.kycValid == true"  ng-include="'pages/menu.html'" 
             ui-track-as-search-param='true'
             class="sidebar sidebar-left"></div>
 
