--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/mobile-angular-ui-hover.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-desktop.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/angularjs-1.4.8/angular.min.js"></script>
     <script src="js/angularjs-1.4.8/angular-route.min.js"></script>
