--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -1,5 +1,43 @@
 <div class="scrollable">
-	<div class="scrollable-content section">
-		Hello ! you're logged in.
-	</div>
+	<div class="list-group">
+      <div class="list-group-item">
+        <h3>Welcome {{ hc.userFirstName }} <br/>
+        <small></small>
+        </h3>
+      </div>
+      <div class="list-group-item media">
+        <div class="pull-left">
+        	<table>
+        		<tr>
+        			<td align="center">
+	        			<i class="fa fa-inr feature-icon fa-4x text-primary"></i>
+	        			<h4 class="homeitem">Accounts</h5>
+        			</td>
+        			<td align="center">
+        				<i class="fa fa-credit-card feature-icon fa-4x text-primary"></i>
+        				<h4 class="homeitem">Cards</h5>
+        			</td>
+        			<td align="center">
+        				<i class="fa fa-inbox feature-icon fa-4x text-primary"></i>
+        				<h4 class="homeitem">Loans</h5>
+        			</td>
+        		</tr>
+        		<tr>
+        			<td align="center">
+        				<i class="fa fa-bar-chart feature-icon fa-4x text-primary"></i>
+        				<h5 class="homeitem">Investments</h5>
+        			</td>
+        			<td align="center">
+        				<i class="fa fa-heartbeat feature-icon fa-4x text-primary"></i>
+        				<h5 class="homeitem">Insurance</h5>
+        			</td>
+        			<td align="center">
+        				<i class="fa fa-line-chart feature-icon fa-4x text-primary"></i>
+        				<h5 class="homeitem">Expenses</h5>
+        			</td>
+        		</tr>
+        	</table>
+        </div>
+      </div>
+    </div>
 </div>
