--- a/src/main/webapp/pages/menu.html
+++ b/src/main/webapp/pages/menu.html
@@ -3,7 +3,7 @@
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/" ng-click="logout()">Logout <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" ng-click="logout()">Logout <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/about">About Magus <i class="fa fa-chevron-right pull-right"></i></a>
     </div>
   </div>
