--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,7 @@
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/controllers/LoginController.js"></script>
+    <script src="js/controllers/LogoutController.js"></script>
     <script src="js/controllers/KYCAadharController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
