--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-	<div class="scrollable-content">
+	<div class="scrollable-content section">
 		<div class="list-group">
 	      <div class="list-group-item">
 	        <h3>Welcome {{ hc.userFirstName }} <br/>
