More UI enhancements

--- a/src/main/webapp/pages/about.html
+++ b/src/main/webapp/pages/about.html
@@ -6,6 +6,17 @@
 				<h1>magus</h1>
 				<small>your personal banker</small>
 			</div>
+			<div class="list-group-item list-group-item-home">
+				<h4>Developed exclusively for ICICI Bank Ltd. by</h4>
+				<h6>Gosalia Priyank</h6>
+				<h6>Jain Ujjwal</h6>
+				<h6>Khanna Puneet</h6>
+				<h6>Naik Prajot</h6>
+				<br/>
+				<button 
+					class="btn btn-lg btn-primary btn-block" href="/#home">
+					<i class="fa fa-bank"></i> Home </button>
+			</div>
 		</div>
 	</div>
 </div>
