--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -9,7 +9,7 @@
 			<div class="list-group-item list-group-item-home">
 		        <div>
 		        	<div ng-if="lc.dataLoading">
-						<i class="fa fa-spinner fa-pulse"></i> <h6>Please wait...</h6>
+						<i class="fa fa-spinner fa-pulse"></i> <small>please wait...</small>
 					</div>
 					<div ng-if="lc.loginFailure">
 						<div class="alert alert-danger" role="alert"><i class="fa fa-2x fa-exclamation-triangle"></i>&nbsp;{{lc.failureMessage}}</div>
