--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-	<div class="scrollable-content">
+	<div class="scrollable-content section">
 		<div class="list-group text-center">
 			<div class="list-group-item list-group-item-home">
 				<img src="images/icici_logo_small.gif"></img>
@@ -9,7 +9,7 @@
 			<div class="list-group-item list-group-item-home">
 		        <div>
 		        	<div ng-if="lc.dataLoading">
-						<i class="fa fa-spinner fa-pulse"></i> <h4>Please wait...</h4>
+						<i class="fa fa-spinner fa-pulse"></i> <h6>Please wait...</h6>
 					</div>
 					<div ng-if="lc.loginFailure">
 						<div class="alert alert-danger" role="alert"><i class="fa fa-2x fa-exclamation-triangle"></i>&nbsp;{{lc.failureMessage}}</div>
@@ -37,3 +37,4 @@
       		</div>
 		</div>
 	</div>
+</div>
