--- a/src/main/webapp/pages/menu.html
+++ b/src/main/webapp/pages/menu.html
@@ -1,10 +1,16 @@
 <div ng-if="globals.kycValid == true" class="scrollable">
-  <h1 class="scrollable-header app-name">Magus<small></small></h1>  
+  <h1 class="scrollable-header app-name">Magus<small>&nbsp;&nbsp;menu</small></h1>  
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
-      <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/" ng-click="logout()">Logout <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/about">About Magus <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/"><i class="fa fa-bank pull-right"></i>&nbsp;Home</a>
+      <a class="list-group-item" href="#/accounts"><i class="fa fa-inr pull-right"></i>&nbsp;Accounts</a>
+      <a class="list-group-item" href="#/cards"><i class="fa fa-credit-card pull-right"></i>&nbsp;Cards</a>
+      <a class="list-group-item" href="#/loans"><i class="fa fa-inbox pull-right"></i>&nbsp;Loans</a>
+      <a class="list-group-item" href="#/investments"><i class="fa fa-bar-chart pull-right"></i>&nbsp;Investments</a>
+      <a class="list-group-item" href="#/insurance"><i class="fa fa-heartbeat pull-right"></i>&nbsp;Insurance</a>
+      <a class="list-group-item" href="#/expenses"><i class="fa fa-line-chart pull-right"></i>&nbsp;Expenses</a>
+      <a class="list-group-item" href="#/about"><i class="fa fa-info pull-right"></i>&nbsp;About</a>
+      <a class="list-group-item" href="#/logout"><i class="fa fa-sign-out pull-right"></i>&nbsp;Logout</a>
     </div>
   </div>
 </div>
