--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,7 @@
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/controllers/LoginController.js"></script>
+    <script src="js/controllers/LogoutController.js"></script>
     <script src="js/controllers/KYCAadharController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
@@ -32,9 +33,7 @@
     ng-controller="MainController"
     ui-prevent-touchmove-defaults>
     <!-- Sidebars -->
-    <div ng-if="globals.kycValid == true"  ng-include="'pages/menu.html'" 
-            ui-track-as-search-param='true'
-            class="sidebar sidebar-left"></div>
+    <div ng-if="globals.kycValid" ng-include="'pages/menu.html'" class="sidebar sidebar-left"></div>
 
     <div class="app"
          ui-swipe-right='Ui.turnOn("uiSidebarLeft")'
@@ -46,9 +45,9 @@
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
           {{ title }}
         </div>
-        <div class="btn-group pull-left">
+        <div ng-if="globals.kycValid" class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-            <i class="fa fa-bars"></i> Menu
+            <i class="fa fa-bars"></i>
           </div>
         </div>
       </div>
