--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,7 @@
     <script src="js/controllers/LogoutController.js"></script>
     <script src="js/controllers/KYCAadharController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
+    <script src="js/controllers/AboutController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
     <script src="js/services/KYCService.js"></script>
   </head>
