--- a/src/main/webapp/pages/about.html
+++ b/src/main/webapp/pages/about.html
@@ -14,7 +14,7 @@
 				<h6>Naik Prajot</h6>
 				<br/>
 				<button 
-					class="btn btn-lg btn-primary btn-block" href="/#home">
+					class="btn btn-lg btn-primary btn-block" ng-click="ac.goHome()">
 					<i class="fa fa-bank"></i> Home </button>
 			</div>
 		</div>
