--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,12 +20,14 @@
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
+    <script src="js/annyang.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/LogoutController.js"></script>
     <script src="js/controllers/KYCAadharController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/AboutController.js"></script>
+    <script src="js/controllers/VirtualRMController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
     <script src="js/services/KYCService.js"></script>
   </head>
