--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -37,6 +37,12 @@
 	        				<h4 class="homeitem">Expenses</h4>
 	        			</td>
 	        		</tr>
+	        		<tr>
+	        			<td align="center" colspan="3" ng-click="hc.virtualRM()">
+	        				<i class="fa fa-user feature-icon fa-4x text-danger"></i>
+	       					<h4 class="homeitem">Virtual RM</h4>
+	        			</td>
+	        		</tr>
 	        	</table>
 	        </div>
 	      </div>
