Virtual RM screen improvements

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,6 +29,7 @@
     <script src="js/controllers/AboutController.js"></script>
     <script src="js/controllers/VirtualRMController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
+    <script src="js/services/RetailService.js"></script>
     <script src="js/services/KYCService.js"></script>
   </head>
 
