Add voice command 'my balance'

--- a/src/main/webapp/pages/virtualrm.html
+++ b/src/main/webapp/pages/virtualrm.html
@@ -13,9 +13,9 @@
 	      	<p id="greeting"></p>
 	      	<br/>
 	      	<br/>
-	      	<div id="btnspk" class="round-button">
+	      	<div id="btnspk" class="round-button" ng-click="vc.speakNow()">
 	      		<div id="btnspkcircle" class="round-button-circle">
-	      			<a id="speakbtn" class="round-button" ng-click="vc.speakNow()">Speak Now</a>
+	      			<a id="speakbtn" class="round-button">Speak Now</a>
 	      		</div>
 	      	</div>
 	      </div>
