--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
     <script src="js/angularjs-1.4.8/angular-cookies.min.js"></script>
     <script src="js/angularjs-1.4.8/angular-resource.min.js"></script>
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.min.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
     <script src="js/annyang.min.js"></script>
@@ -28,9 +29,11 @@
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/AboutController.js"></script>
     <script src="js/controllers/VirtualRMController.js"></script>
+    <script src="js/controllers/ExpenseController.js"></script>
     <script src="js/services/AuthenticationService.js"></script>
     <script src="js/services/RetailService.js"></script>
     <script src="js/services/KYCService.js"></script>
+    <script src="js/services/ChartsServices.js"></script>    
   </head>
 
   <body ng-app="magus" 
