- Home screen expenses link now works - Minor improvements to KYC form

--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -31,7 +31,7 @@
 	        				<i class="fa fa-heartbeat feature-icon fa-3x text-primary"></i>
 	        				<h5 class="homeitem">Insurance</h5>
 	        			</td>
-	        			<td align="center">
+	        			<td align="center" ng-click="hc.expenses()">
 	        				<i class="fa fa-line-chart feature-icon fa-3x text-primary"></i>
 	        				<h5 class="homeitem">Expenses</h5>
 	        			</td>
