--- a/src/main/webapp/pages/kycAadhar.html
+++ b/src/main/webapp/pages/kycAadhar.html
@@ -1,7 +1,7 @@
 <div class="scrollable">
 	<div class="scrollable-content section">
 		<div class="list-group text-center">
-			<h3>Hey {{ kca.userFirstName }}, we're almost done!</h3>
+			<h3>We're almost done!</h3>
 			<h5>This step will perform AADHAR based e-KYC verification.</h5>
 			<br/>
 			<div class="list-group-item list-group-item-home">
