Fix issue with KYC notification popup being displayed in all pages

--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -2,9 +2,9 @@
 	<div class="scrollable-content section">
 		<div class="list-group text-center">
 			<div class="list-group-item list-group-item-home">
-				<img src="images/icici_logo_small.gif"></img>
+				<img width="75" height="75" src="images/icici_logo_small.gif"></img>
 				<h1>magus</h1>
-				<small>your personal banker</small>
+				<h3><small>your personal banker</small></h3>
 			</div>
 			<div class="list-group-item list-group-item-home">
 		        <div>
