--- a/src/main/webapp/pages/expenseTracking.html
+++ b/src/main/webapp/pages/expenseTracking.html
@@ -2,18 +2,16 @@
 	<div class="scrollable-content section">
 		<div class="list-group text-center">
 			<div class="list-group-item list-group-item-home">
-				<img src="images/icici_logo_small.gif"></img>
+				<img width="50" height="50" src="images/icici_logo_small.gif"></img>
 				<h1>magus</h1>
-				<small>Expense Tracker</small>
+				<h4>Expense Tracker</h4>
 			</div>
 			<div class="list-group-item list-group-item-home">
-		        <div>
-		        	<div ng-if="ec.dataLoading">
-						<i class="fa fa-spinner fa-pulse"></i> <small>please wait...</small>
-					</div>
-		            <div ng-init="ec.expenseTracks(10)" id="greeting"></div>
-		            <div id="columnchart_values" style="width: 900px; height: 300px;"></div>
-		        </div>
+	        	<div ng-if="ec.dataLoading == true">
+					<i class="fa fa-spinner fa-pulse"></i> <small>please wait...</small>
+				</div>
+	            <div ng-init="ec.expenseTracks(10)" id="greeting"></div>
+	            <div id="columnchart_values" style="width: 400px; height: 300px;"></div>
       		</div>
 		</div>
 	</div>
