- UI improvements to home screen - Load graph only on expense page and not on all pages

--- a/src/main/webapp/pages/expenseTracking.html
+++ b/src/main/webapp/pages/expenseTracking.html
@@ -1,3 +1,4 @@
+<script src="js/services/ChartsServices.js"></script> 
 <div class="scrollable">
 	<div class="scrollable-content section">
 		<div class="list-group text-center">
