--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -10,36 +10,51 @@
 	        	<table>
 	        		<tr>
 	        			<td align="center">
-		        			<i class="fa fa-inr feature-icon fa-3x text-primary"></i>
-		        			<h5 class="homeitem">Accounts</h5>
+		        			<button type="button" class="btn btn-circle-homescreen">
+		        				<i class="fa fa-credit-card feature-icon fa-3x text-primary"></i>
+	        				</button>
+	        				Accounts
 	        			</td>
 	        			<td align="center">
-	        				<i class="fa fa-credit-card feature-icon fa-3x text-primary"></i>
-	        				<h5 class="homeitem">Cards</h5>
+	        				<button type="button" class="btn btn-circle-homescreen">
+		        				<i class="fa fa-credit-card feature-icon fa-3x text-primary"></i>
+	        				</button>
+	        				Cards
 	        			</td>
 	        			<td align="center">
-	        				<i class="fa fa-inbox feature-icon fa-3x text-primary"></i>
-	        				<h5 class="homeitem">Loans</h5>
+	        				<button type="button" class="btn btn-circle-homescreen">
+		        				<i class="fa fa-inbox feature-icon fa-3x text-primary"></i>
+	        				</button>
+	        				Loans
 	        			</td>
 	        		</tr>
 	        		<tr>
 	        			<td align="center">
-	        				<i class="fa fa-bar-chart feature-icon fa-3x text-primary"></i>
-	        				<h5 class="homeitem">Investments</h5>
+	        				<button type="button" class="btn btn-circle-homescreen">
+		        				<i class="fa fa-bar-chart feature-icon fa-3x text-primary"></i>
+	        				</button>
+	        				Investments
 	        			</td>
 	        			<td align="center">
-	        				<i class="fa fa-heartbeat feature-icon fa-3x text-primary"></i>
-	        				<h5 class="homeitem">Insurance</h5>
+	        				<button type="button" class="btn btn-circle-homescreen">
+		        				<i class="fa fa-heartbeat feature-icon fa-4x text-primary"></i>
+	        				</button>
+	        				Insurance
 	        			</td>
 	        			<td align="center" ng-click="hc.expenses()">
-	        				<i class="fa fa-line-chart feature-icon fa-3x text-primary"></i>
-	        				<h5 class="homeitem">Expenses</h5>
+	        				<button type="button" class="btn btn-circle-homescreen">
+		        				<i class="fa fa-line-chart feature-icon fa-4x text-primary"></i>
+	        				</button>
+	        				Expenses
 	        			</td>
 	        		</tr>
 	        		<tr>
 	        			<td align="center" colspan="3" ng-click="hc.virtualRM()">
-	        				<i class="fa fa-user feature-icon fa-4x text-danger"></i>
-	       					<h4 class="homeitem">Virtual RM</h4>
+	        				<button type="button" class="btn btn-circle-homescreen btn-xl">
+		        				<i class="fa fa-user feature-icon fa-3x text-danger"></i>
+		        				<br/><h5 class="homeitem">Insta Assist</h5>
+	        				</button>
+	        				
 	        			</td>
 	        		</tr>
 	        	</table>
