--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -11,7 +11,7 @@
 	        		<tr>
 	        			<td align="center">
 		        			<button type="button" class="btn btn-circle-homescreen">
-		        				<i class="fa fa-credit-card feature-icon fa-3x text-primary"></i>
+		        				<i class="fa fa-inr feature-icon fa-3x text-primary"></i>
 	        				</button>
 	        				Accounts
 	        			</td>
@@ -54,7 +54,6 @@
 		        				<i class="fa fa-user feature-icon fa-3x text-danger"></i>
 		        				<br/><h5 class="homeitem">Insta Assist</h5>
 	        				</button>
-	        				
 	        			</td>
 	        		</tr>
 	        	</table>
