Rebranding Virtual RM as iAssist

--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -51,8 +51,8 @@
 	        		<tr>
 	        			<td align="center" colspan="3" ng-click="hc.virtualRM()">
 	        				<button type="button" class="btn btn-circle-homescreen btn-xl">
-		        				<i class="fa fa-user feature-icon fa-3x text-danger"></i>
-		        				<br/><h5 class="homeitem">Insta Assist</h5>
+		        				<i class="fa fa-user feature-icon fa-3x"></i>
+		        				<br/><h5 class="homeitem">iAssist</h5>
 	        				</button>
 	        			</td>
 	        		</tr>
