Homescreen icons in bolder text

--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -13,19 +13,19 @@
 		        			<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-inr feature-icon fa-3x text-primary"></i>
 	        				</button>
-	        				Accounts
+	        				<b>Accounts</b>
 	        			</td>
 	        			<td align="center">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-credit-card feature-icon fa-3x text-primary"></i>
 	        				</button>
-	        				Cards
+	        				<b>Cards</b>
 	        			</td>
 	        			<td align="center">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-inbox feature-icon fa-3x text-primary"></i>
 	        				</button>
-	        				Loans
+	        				<b>Loans</b>
 	        			</td>
 	        		</tr>
 	        		<tr>
@@ -33,19 +33,19 @@
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-bar-chart feature-icon fa-3x text-primary"></i>
 	        				</button>
-	        				Investments
+	        				<b>Investments</b>
 	        			</td>
 	        			<td align="center">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-heartbeat feature-icon fa-3x text-primary"></i>
 	        				</button>
-	        				Insurance
+	        				<b>Insurance</b>
 	        			</td>
 	        			<td align="center" ng-click="hc.expenses()">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-line-chart feature-icon fa-3x text-primary"></i>
 	        				</button>
-	        				Expenses
+	        				<b>Expenses</b>
 	        			</td>
 	        		</tr>
 	        		<tr>
