fixing warnings errors

--- a/src/main/webapp/pages/kycAadhar.html
+++ b/src/main/webapp/pages/kycAadhar.html
@@ -23,7 +23,7 @@
 							<br/>
 							<button ng-disabled="form.$invalid || kca.dataLoading"
 								class="btn btn-lg btn-success btn-block" ng-click="kca.getOTP()">
-								<i class="fa fa-sign-in"></i></i> Proceed </button>
+								<i class="fa fa-sign-in"></i> Proceed </button>
 						</div>
 						<div ng-if="kca.otpGenerated == true" class="form-group">
 							<label>Please enter the 6 digit OTP</label> <input type="text"
@@ -34,7 +34,7 @@
 						<div ng-if="kca.otpGenerated == true" class="form-actions">
 							<button type="submit" ng-disabled="form.$invalid || kca.dataLoading"
 								class="btn btn-lg btn-primary btn-block">
-								<i class="fa fa-sign-in"></i></i> Activate </button>
+								<i class="fa fa-sign-in"></i> Activate </button>
 						</div>
 					</form>
 		        </div>
