--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -30,7 +30,7 @@
 						<div class="form-actions">
 							<button type="submit" ng-disabled="form.$invalid || vm.dataLoading"
 								class="btn btn-lg btn-primary btn-block">
-								<i class="fa fa-sign-in"></i></i> Login </button>
+								<i class="fa fa-sign-in"></i> Login </button>
 						</div>
 					</form>
 		        </div>
