--- a/src/main/webapp/pages/logout.html
+++ b/src/main/webapp/pages/logout.html
@@ -9,10 +9,10 @@
 				<br/>
 				<button 
 					class="btn btn-lg btn-danger btn-block" ng-click="oc.logout()">
-					<i class="fa fa-sign-out"></i></i> Logout </button>
+					<i class="fa fa-sign-out"></i> Logout </button>
 				<button 
 					class="btn btn-lg btn-primary btn-block" ng-click="oc.cancelLogout()">
-					<i class="fa fa-times"></i></i> Cancel </button>
+					<i class="fa fa-times"></i> Cancel </button>
 			</div>
 		</div>
 	</div>
