--- a/src/main/webapp/pages/onboardingComplete.html
+++ b/src/main/webapp/pages/onboardingComplete.html
@@ -9,7 +9,7 @@
 				<br/>
 				<button 
 					class="btn btn-lg btn-success btn-block" ng-click="kca.startBanking()">
-					<i class="fa fa-check"></i></i> Start Banking </button>
+					<i class="fa fa-check"></i> Start Banking </button>
 			</div>
 		</div>
 	</div>
