--- a/src/main/webapp/pages/expenseTracking.html
+++ b/src/main/webapp/pages/expenseTracking.html
@@ -12,7 +12,7 @@
 					<i class="fa fa-spinner fa-pulse"></i> <small>please wait...</small>
 				</div>
 	            <div ng-init="ec.expenseTracks(10)" id="greeting"></div>
-	            <div id="columnchart_values" style="width: 400px; height: 300px;"></div>
+	            <div id="columnchart_values" style="width: 100%; height: 300px;"></div>
       		</div>
 		</div>
 	</div>
