--- a/src/main/webapp/pages/expenseTracking.html
+++ b/src/main/webapp/pages/expenseTracking.html
@@ -7,11 +7,12 @@
 				<h1>magus</h1>
 				<h4>Expense Tracker</h4>
 			</div>
+			<br/>
+			<div ng-if="ec.dataLoading">
+				<i class="fa fa-spinner fa-pulse fa-2x"></i> <small>Loading expense chart...</small>
+			</div>
 			<div class="list-group-item list-group-item-home">
-	        	<div ng-if="ec.dataLoading == true">
-					<i class="fa fa-spinner fa-pulse"></i> <small>please wait...</small>
-				</div>
-	            <div ng-init="ec.expenseTracks(10)" id="greeting"></div>
+	            <div ng-init="ec.expenseTracks(10);" id="greeting"></div>
 	            <div id="columnchart_values" style="width: 100%; height: 300px;"></div>
       		</div>
 		</div>
