--- a/src/main/webapp/pages/virtualrm.html
+++ b/src/main/webapp/pages/virtualrm.html
@@ -20,7 +20,7 @@
 	      		<i class="fa fa-spinner fa-pulse"></i> Listening...
 	      	</div>
 	      	<div ng-if="vc.listening == false">
-	      		Press the button to start speaking
+	      		Press the button below to start speaking
 	      	</div>
 	      	<br/>
 	      	<button ng-if="vc.listening == false" ng-click="vc.speakNow()" type="button" class="btn btn-primary btn-circle btn-xl"><i class="fa fa-microphone fa-2x"></i></button>
