--- a/src/main/webapp/pages/expenseTracking.html
+++ b/src/main/webapp/pages/expenseTracking.html
@@ -13,6 +13,23 @@
 			</div>
 			<div class="list-group-item list-group-item-home">
 	            <div ng-init="ec.expenseTracks(10);" id="greeting"></div>
+
+		            <form role="form">
+						<fieldset>
+						<div class="form-group has-success has-feedback">
+						 	Transaction Types :<select id="sel" class="input-block-level" ng-model="list_category" ng-options="tranType as tranType for tranType in tranTypes.transactionTypes">    
+						        <option value="">All Chart</option>
+						    </select>
+						</div>
+						<div class="form-actions">
+							<br/>
+							<button ng-disabled="form.$invalid || ec.dataLoading"
+								class="btn btn-lg btn-success btn-block" ng-click="ec.transactionDetails(10,list_category)">
+								<i class="fa fa-sign-in"></i> Get Details </button>
+						</div>
+						</fieldset>
+					</form>
+
 	            <div id="columnchart_values" style="width: 100%; height: 300px;"></div>
       		</div>
 		</div>
