MVC with chartservices

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,7 @@
     <script src="js/services/AuthenticationService.js"></script>
     <script src="js/services/RetailService.js"></script>
     <script src="js/services/KYCService.js"></script>   
+	<script src="js/services/ChartsServices.js"></script> 
   </head>
 
   <body ng-app="magus" 
