--- a/src/main/webapp/pages/expenseTracking.html
+++ b/src/main/webapp/pages/expenseTracking.html
@@ -1,44 +1,54 @@
-<script src="js/services/ChartsServices.js"></script> 
 <div class="scrollable">
 	<div class="scrollable-content section">
-		<div class="list-group text-center">
-			<div class="list-group-item list-group-item-home">
-				<img width="50" height="50" src="images/icici_logo_small.gif"></img>
-				<h1>magus</h1>
-				<h4>Expense Tracker</h4>
-			</div>
-			<br/>
-			<div ng-if="ec.dataLoading">
-				<i class="fa fa-spinner fa-pulse fa-2x"></i> <small>Loading expense chart...</small>
-			</div>
-			<div class="list-group-item list-group-item-home">
-	            <div ng-init="ec.expenseTracks(10);" id="greeting"></div>
+		<div class="scrollable">
+			<div class="scrollable-content section">
+				<div class="list-group text-center">
+					<div class="list-group-item list-group-item-home">
+						<img width="50" height="50" src="images/icici_logo_small.gif"></img>
+						<h1>magus</h1>
+						<h4>Expense Tracker</h4>
+					</div>
+					<br />
+					<div ng-if="ec.dataLoading">
+						<i class="fa fa-spinner fa-pulse fa-2x"></i> <small>Loading
+							expense chart...</small>
+					</div>
+					<div class="list-group-item list-group-item-home">
+						<div ng-init="ec.expenseTracks(10);" id="greeting"></div>
 
-		            <form role="form">
-						<fieldset>
-						<div class="form-group has-success has-feedback">
-						 	Transaction Types :<select id="sel" class="input-block-level" ng-model="list_category" ng-options="tranType as tranType for tranType in tranTypes.transactionTypes">    
-						        <option value="">All Chart</option>
-						    </select>
-						</div>
-							<br/>
-							<button ng-disabled="(form.$invalid || ec.dataLoading || list_category.length > 0)"
-								class="btn btn-lg btn-success btn-block" ng-click="ec.pieOrColumn(10)">
-								<i class="fa fa-sign-in"></i>Change View</button>
-							<br/>
-							<br/>
-							
-						<div class="form-actions">
-							<br/>
-							<button ng-disabled="form.$invalid || ec.dataLoading"
-								class="btn btn-lg btn-success btn-block" ng-click="ec.transactionDetails(10,list_category)">
-								<i class="fa fa-sign-in"></i> Get Details </button>
-						</div>
-						</fieldset>
-					</form>
+						<form role="form">
+							<fieldset>
+								<div class="form-group has-success has-feedback">
+									Transaction Types :<select id="sel" class="input-block-level"
+										ng-model="list_category"
+										ng-options="tranType as tranType for tranType in tranTypes.transactionTypes">
+										<option value="">All Chart</option>
+									</select>
+								</div>
+								<br />
+								<button
+									ng-disabled="(form.$invalid || ec.dataLoading || list_category.length > 0)"
+									class="btn btn-lg btn-success btn-block"
+									ng-click="ec.pieOrColumn(10)">
+									<i class="fa fa-sign-in"></i>Change View
+								</button>
+								<br /> <br />
 
-	            <div id="columnchart_values" style="width: 100%; height: 300px;"></div>
-      		</div>
+								<div class="form-actions">
+									<br />
+									<button ng-disabled="form.$invalid || ec.dataLoading"
+										class="btn btn-lg btn-success btn-block"
+										ng-click="ec.transactionDetails(10,list_category)">
+										<i class="fa fa-sign-in"></i> Get Details
+									</button>
+								</div>
+							</fieldset>
+						</form>
+
+						<div id="columnchart_values" style="width: 100%; height: 300px;"></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
