--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/mobile-angular-ui-hover.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-desktop.min.css" />
+    <link rel="stylesheet" href="css/angular-chart.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/angularjs-1.4.8/angular.min.js"></script>
@@ -22,6 +23,8 @@
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
     <script src="js/annyang.min.js"></script>
+    <script src="js/chart.js"></script>
+    <script src="js/angular-chart.js"></script>
     <script src="js/main.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/LogoutController.js"></script>
