- Rename 'Account Summary' icon to 'Quick Account Summary' - Adjust font sizes in Quick Account Summary

--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -55,7 +55,7 @@
 	        				<button type="button" class="btn btn-circle-homescreen btn-xl">
 		        				<i class="fa fa-dashboard feature-icon fa-3x"></i>
 	        				</button>
-	        				<h5 class="homeitem">Account Summary</h5>
+	        				<h5 class="homeitem">Quick Account Summary</h5>
 	        			</td>
 	        			<td align="center" ng-click="hc.virtualRM()">
 	        				<button type="button" class="btn btn-circle-homescreen btn-xl">
