--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -7,41 +7,41 @@
 	        </h3>
 	      </div>
 	      <div class="list-group-item media">
-	        	<table>
-	        		<tr>
-	        			<td align="center">
+	        	<table class="home">
+	        		<tr class="tbl">
+	        			<td class="tbl" align="center">
 		        			<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-inr feature-icon fa-3x text-primary"></i>
 	        				</button>
 	        				Accounts
 	        			</td>
-	        			<td align="center">
+	        			<td class="tbl" align="center">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-credit-card feature-icon fa-3x text-primary"></i>
 	        				</button>
 	        				Cards
 	        			</td>
-	        			<td align="center">
+	        			<td class="tbl" align="center">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-inbox feature-icon fa-3x text-primary"></i>
 	        				</button>
 	        				Loans
 	        			</td>
 	        		</tr>
-	        		<tr>
-	        			<td align="center">
+	        		<tr class="tbl">
+	        			<td class="tbl" align="center">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-bar-chart feature-icon fa-3x text-primary"></i>
 	        				</button>
 	        				Investments
 	        			</td>
-	        			<td align="center">
+	        			<td class="tbl" align="center">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-heartbeat feature-icon fa-3x text-primary"></i>
 	        				</button>
 	        				Insurance
 	        			</td>
-	        			<td align="center" ng-click="hc.expenses()">
+	        			<td class="tbl" align="center" ng-click="hc.expenses()">
 	        				<button type="button" class="btn btn-circle-homescreen">
 		        				<i class="fa fa-line-chart feature-icon fa-3x text-primary"></i>
 	        				</button>
@@ -49,15 +49,15 @@
 	        			</td>
 	        		</tr>
 	        	</table>
-	        	<table align="center">
-	        		<tr>
-	        			<td align="center" ng-click="hc.salaryInfo()">
+	        	<table class="home" align="center">
+	        		<tr class="tbl">
+	        			<td class="tbl" align="center" ng-click="hc.salaryInfo()">
 	        				<button type="button" class="btn btn-circle-homescreen btn-xl">
 		        				<i class="fa fa-dashboard feature-icon fa-3x"></i>
 	        				</button>
 	        				<h5 class="homeitem">Quick Account Summary</h5>
 	        			</td>
-	        			<td align="center" ng-click="hc.virtualRM()">
+	        			<td class="tbl" align="center" ng-click="hc.virtualRM()">
 	        				<button type="button" class="btn btn-circle-homescreen btn-xl">
 		        				<i class="fa fa-user feature-icon fa-3x"></i>
 	        				</button>
