--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,8 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="js/mobile-angular-ui-1.2.0-rc3/mobile-angular-ui.gestures.min.js"></script>
+    <script src="js/bootstrap-slider.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap-slider.min.css" />
     <script src="js/annyang.min.js"></script>
     <script src="js/chart.js"></script>
     <script src="js/angular-chart.js"></script>
